[gd_scene load_steps=3 format=3 uid="uid://c3k0i6b0fwpwn"]

[ext_resource type="Script" path="res://scripts/InfoBox.gd" id="2_tkduc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mi3iq"]
bg_color = Color(1, 0.87451, 0.498039, 1)

[node name="InfoBox" type="Panel"]
offset_right = 512.0
offset_bottom = 256.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mi3iq")
script = ExtResource("2_tkduc")

[node name="InfoList" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 512.0
offset_bottom = 256.0
mouse_filter = 2

[node name="InfoBanner" type="HBoxContainer" parent="InfoList"]
layout_mode = 2
alignment = 1

[node name="InfoTitle" type="VBoxContainer" parent="InfoList/InfoBanner"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="Label" parent="InfoList/InfoBanner/InfoTitle"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
text = "Name"

[node name="Description" type="Label" parent="InfoList/InfoBanner/InfoTitle"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
theme_override_font_sizes/font_size = 12
text = "Description"

[node name="Image" type="TextureRect" parent="InfoList/InfoBanner"]
unique_name_in_owner = true
layout_mode = 2

[node name="Health" type="Label" parent="InfoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
text = "Health: -1/-1"

[node name="Attack" type="Label" parent="InfoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
text = "Attack: -1"

[node name="DeathEffect" type="Label" parent="InfoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
text = "Death: N/A"

[node name="VictoryEffect" type="Label" parent="InfoList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0.74902)
text = "Victory: N/A"
